--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-praw
-pandas
-python-dotenv
-matplotlib
-yfinance
-transformers
-tensorflow
-seaborn
-tf-keras
-scikit-learn
+praw==7.8.1
+pandas==2.2.3
+python-dotenv==1.0.1
+matplotlib==3.9.3
+yfinance==0.2.50
+transformers==4.47.0
+tensorflow==2.18.0
+seaborn==0.13.2
+tf-keras==2.18.0
+scikit-learn==1.5.2
