--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-CLIENT_ID = ""
-CLIENT_SECRET = ""
-USER_AGENT = "" 
+CLIENT_ID = "YOUR_REDDIT_APP_CLIENT_ID"
+CLIENT_SECRET = "YOUR_REDDIT_APP_CLIENT_SECRET"
+USER_AGENT = "USER_AGENT_HEADERS" 
